# minos-codex

./: Cargo.toml  LICENSE  LICENSE-GPL  makefile  readme.md  release.sh
.github/workflows/: release.yml  release_to_cargo.yml
detections/: aws_access_key.toml  bank_iban.toml  bank_switf.toml  bitcoin_wallet.toml  credit_card.toml  db_connection_string.toml  digital_ocean.toml  drivers_license.toml  elasticsearch_connection_string.toml  email.toml  eth_wallet.toml  facebook_access_token.toml  google_api_key.toml  heroku_api_key.toml  ip_address.toml  jira_api_token.toml  jwt.toml  mailchimp_api_key.toml  npm_token.toml  oauth_token.toml  passport_number.toml  paypal_api_key.toml  phone_number.toml  pypi_api_token.toml  redis_connection_url.toml  slack_token.toml  ssh_keys.toml  string_of_intrest.toml  stripe_api_key.toml  twitter_api_key.toml  username.toml  uuid.toml  vin.toml
examples/: basic_usage.rs
src/: lib.rs
src/config/: mod.rs
src/regex/: mod.rs
src/scanner/: mod.rs
src/secret_type/: mod.rs
