[package]
name = "minos-codex"
version = "0.0.1"
edition = "2021"
description = "Minos Codex is a tool for detecting and identifying secrets in a string"

[package.metadata.cross]
xargo = false

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
toml = "0.8.14"
