[package]
name = "minos-codex"
version = "0.0.29"
edition = "2021"
authors = ["Ryan LaBouve <your.email@example.com>"]
license = "GPL-3.0-only"
description = "Minos Codex is a tool for detecting and identifying secrets in a string"
readme = "readme.md"

[package.metadata.cross]
xargo = false

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
regex = "1.10.5"
rust-embed = "8.4.0"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
toml = "0.8.14"
